2000-10-12  Frank Warmerdam  <warmerda@cs46980-c>

	* gdal/frmts/hfa: Implemented write support for Imagine files.

2000-10-06  Frank Warmerdam  <warmerda@cs46980-c>

	* Upgraded PAuxDataset to support nodata values.

	* Added SetNoDataValue(), SetCategoryNames() and some C/Python entry 
	points.

	* Default setting of GDALRasterBand->eAccess based on the dataset
	in SetBand().

2000-09-28  Frank Warmerdam  <warmerda@cs46980-c>

	* Updated to current MITAB source from CVS. 

2000-09-27  Frank Warmerdam  <warmerda@cs46980-c>

	* Added colortable support for grass driver. 

	* Fixed libtiff build to include ZIP/Deflate support.

	* Added configure time support for -lz or the internal implementation.

2000-09-25  Frank Warmerdam  <warmerda@cs46980-c>

	* Release 1.1.1 issued.
